--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,67 +10,63 @@
     <link rel="stylesheet" href="~/Inmobiliaria.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
 </head>
 
 <body>
     <header>
-
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
-
-            <!--@if (!User.Identity.IsAuthenticated)
-            {
-                                                                <a class="py-2" asp-controller="Home" asp-action="Index"><span class="lnr lnr-home"></span> Inicio</a>
-                                                                <a class="py-2 d-none d-md-inline-block float-right" href='@Url.Link("login", null)'><span class="lnr lnr-enter"></span> Acceder</a>
-            }
-            else
-            {
-            }ESTA LLAVE VA DESPUES ENCERRANDO EL MENU!
-
-                -->
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inmobiliaria</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Propietario" asp-action="Index">
-                                <i class="fa fa-address-book"></i> Propietarios
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Inquilino" asp-action="Index">
-                                <i class="fa fa-male"></i> Inquilino
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Inmueble" asp-action="Index">
-                                <i class="fa fa-building"></i> Inmueble
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Contrato" asp-action="Index">
-                                <i class="fa fa-folder-open"></i> Contrato
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index">
-                                <i class="fa fa-users"></i> Usuario
-                            </a>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Pago" asp-action="Index">
-                                <i class="fa fa-money"></i> Pagos
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+                @if(!User.Identity.IsAuthenticated){
+					<a class="py-2" asp-controller="Home" asp-action="Index"><span class="lnr lnr-home"></span> Inicio</a>
+					<a class="py-2 d-none d-md-inline-block float-right" asp-controller="Usuario" asp-action="Login"><span class="lnr lnr-enter"></span> Acceder</a>}
+                else{
+                    <div class="container-fluid">
+                        <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inmobiliaria</a>
+                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                            data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent" aria-expanded="false"
+                            aria-label="Toggle navigation">
+                            <span class="navbar-toggler-icon"></span>
+                        </button>
+                        <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                            <ul class="navbar-nav flex-grow-1">
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Propietario"
+                                        asp-action="Index">
+                                        <i class="fa fa-address-book"></i> Propietarios
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Inquilino"
+                                        asp-action="Index">
+                                        <i class="fa fa-male"></i> Inquilino
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Inmueble" asp-action="Index">
+                                        <i class="fa fa-building"></i> Inmueble
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Contrato" asp-action="Index">
+                                        <i class="fa fa-folder-open"></i> Contrato
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index">
+                                        <i class="fa fa-users"></i> Usuario
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Pago" asp-action="Index">
+                                        <i class="fa fa-money"></i> Pagos
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                
+                }
+            </div> 
         </nav>
     </header>
     <div class="container">
@@ -78,7 +74,6 @@
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2024 - Inmobiliaria
