--- a/Views/Usuario/Crear.cshtml
+++ b/Views/Usuario/Crear.cshtml
@@ -5,7 +5,7 @@
     int id = Model == null ? 0 : Model.IdUsuario;
 }
 
-<h4>Contrato</h4>
+<h4>Usuario</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
