--- a/Views/Contrato/Editar.cshtml
+++ b/Views/Contrato/Editar.cshtml
@@ -47,7 +47,7 @@
             <span asp-validation-for="IdInquilino" class="text-danger"></span>
         </div>
         <div class="form-group">
-            <label asp-for="IdInmueble" class="control-label">Inquilino</label>
+            <label asp-for="IdInmueble" class="control-label">Inmueble</label>
             <select asp-for="IdInmueble" class="form-control" required>
                 @foreach (var item in ViewBag.Inmuebles)
                 {
