--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -67,7 +67,7 @@
                         @Html.DisplayFor(modelItem => item.RolNombre)
                     </td>
                     <td>
-                        <a asp-action="Editar" asp-route-IdUsuario="@item.IdUsuario" title="Editar"><span
+                        <a asp-action="Editar" asp-route-idUsuario="@item.IdUsuario" title="Editar"><span
                                 class="fa fa-edit"></span></a>
                         <a asp-action="Detalle" asp-route-IdUsuario="@item.IdUsuario" title="DetalleUsuario"><span
                                 class="fa fa-info"></span></a>
