--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,39 +10,88 @@
     <link rel="stylesheet" href="~/Inmobiliaria.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.linearicons.com/free/1.0.0/icon-font.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark border-bottom box-shadow mb-3">
-            <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inmobiliaria</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
-                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-                    <ul class="navbar-nav flex-grow-1">
-
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Propietario"
-                                asp-action="Index">Propietarios</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Inquilino"
-                                asp-action="Index">Inquilinos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Inmueble"
-                                asp-action="Index">Inmuebles</a>
-                        </li>
-                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Contrato"
-                                asp-action="Index">Contratos</a>
-                        </li>
-                    </ul>
+            @if (!User.Identity.IsAuthenticated)
+            {
+                <a class="py-2" asp-controller="Home" asp-action="Index"><span class="lnr lnr-home"></span> Inicio</a>
+                <a class="py-2 d-none d-md-inline-block float-right" asp-controller="Usuario" asp-action="Login"><span
+                        class="lnr lnr-enter"></span> Acceder</a>
+            }
+            else
+            {
+                <div class="container-fluid">
+                    <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Inmobiliaria</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse"
+                        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                        <ul class="navbar-nav flex-grow-1">
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Propietario" asp-action="Index">
+                                    <i class="fa fa-address-book"></i> Propietarios
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Inquilino" asp-action="Index">
+                                    <i class="fa fa-male"></i> Inquilino
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Inmueble" asp-action="Index">
+                                    <i class="fa fa-building"></i> Inmueble
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Contrato" asp-action="Index">
+                                    <i class="fa fa-folder-open"></i> Contrato
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index">
+                                    <i class="fa fa-users"></i> Usuario
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-light" asp-area="" asp-controller="Pago" asp-action="Index">
+                                    <i class="fa fa-money"></i> Pagos
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
+
+                <div class="dropdown">
+                    <a class="btn btn-primary dropdown-toggle text-light" href="#" role="button" id="userMenu"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"
+                        data-display="static">
+                        <span class="lnr lnr-user"></span> @User.Identity.Name
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="userMenu">
+                        @{
+                            var idUsuarioClaim = User.FindFirst("IdUsuario");
+                            var idUsuario = idUsuarioClaim != null ? idUsuarioClaim.Value : string.Empty;
+                        }
+
+                        <a class="dropdown-item text-Dark" asp-controller="Usuario" asp-action="Editar"
+                            asp-route-IdUsuario="@idUsuario">
+                            <i class="fa fa-address-card-o"> Perfil</i>
+                        </a>
+
+
+                        <a class="dropdown-item text-dark" asp-controller="Usuario" asp-action="Logout">
+                            <i class="fa fa-sign-out"></i> Salir
+                        </a>
+                    </div>
+                </div>
+
+
+            }
             </div>
         </nav>
     </header>
@@ -51,15 +100,17 @@
             @RenderBody()
         </main>
     </div>
-
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Inmobiliaria 
+            &copy; 2024 - Inmobiliaria
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
