--- a/Views/Usuario/Detalle.cshtml
+++ b/Views/Usuario/Detalle.cshtml
@@ -2,65 +2,56 @@
 @{
     ViewData["Title"] = "Editar Usuario";
 }
-<!--
-<h4>Detalle Contrato</h4>
+
+<h4>Detalle Usuario</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form>
+        <form enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="IdContrato" class="control-label">ID Contrato</label>
-                <input asp-for="IdContrato" class="form-control" readonly />
+                <label asp-for="IdUsuario" class="control-label">ID Usuario</label>
+                <input asp-for="IdUsuario" class="form-control" readonly />
             </div>
             <div class="form-group">
-                <label asp-for="FechaInicio" class="control-label">Fecha de Inicio</label>
-                <input asp-for="FechaInicio" class="form-control" readonly />
-                <span asp-validation-for="FechaInicio" class="text-danger"></span>
+                <label asp-for="Nombre" class="control-label">Nombre</label>
+                <input asp-for="Nombre" class="form-control" readonly />
+                <span asp-validation-for="Nombre" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="FechaFinalizacion" class="control-label">Fecha de Finalización</label>
-                <input asp-for="FechaFinalizacion" class="form-control" readonly />
-                <span asp-validation-for="FechaFinalizacion" class="text-danger"></span>
+                <label asp-for="Apellido" class="control-label">Apellido</label>
+                <input asp-for="Apellido" class="form-control" readonly />
+                <span asp-validation-for="Apellido" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MontoAlquiler" class="control-label">Monto de Alquiler</label>
-                <input asp-for="MontoAlquiler" class="form-control" readonly />
-                <span asp-validation-for="MontoAlquiler" class="text-danger"></span>
+                <label asp-for="Email" class="control-label">Email</label>
+                <input asp-for="Email" class="form-control" readonly />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Estado" class="control-label">Estado</label>
-                <select asp-for="Estado" class="form-control" disabled>
-                    <option value="True">Activo</option>
-                    <option value="False">Inactivo</option>
-                </select>
-                <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdInquilino" class="control-label">Inquilino</label>
-                <select asp-for="IdInquilino" class="form-control" disabled>
-                    @foreach (var item in ViewBag.Inquilinos)
+                <label asp-for="AvatarUrl" class="control-label" readonly>Avatar Actual</label>
+                <div class="form-group">
+                    @if (!string.IsNullOrEmpty(Model.AvatarUrl))
                     {
-                        <option value="@item.IdInquilino">@($"{item.Nombre} {item.Apellido}")</option>
+                        <img src="@Model.AvatarUrl" id="avatar-preview" alt="Avatar" style="max-width: 150px;">
                     }
-                </select>
-                <span asp-validation-for="IdInquilino" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="IdInmueble" class="control-label">Inmueble</label>
-                <select asp-for="IdInmueble" class="form-control" disabled>
-                    @foreach (var item in ViewBag.Inmuebles)
+                    else
                     {
-                        <option value="@item.IdInmueble">@item.Direccion</option>
+                        <p>No hay avatar disponible.</p>
                     }
-                </select>
-                <span asp-validation-for="IdInmueble" class="text-danger"></span>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="RolNombre" class="control-label" readonly>Rol</label>
+                <input asp-for="RolNombre" class="form-control" readonly>
+                <span asp-validation-for="RolNombre" class="text-danger"></span>
             </div>
         </form>
     </div>
+
 </div>
 
 <div>
     <a asp-action="Index" class="btn btn-secondary">Volver</a>
 </div>
--->
