--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -61,7 +61,11 @@
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
+                        @if(item.AvatarUrl != null){
                         <img width="32" src="@item.AvatarUrl" alt="User Avatar" />
+                        }else{
+                            <p>Sin avatar</p>
+                        }
                     </td>
                     <td>
                         @Html.DisplayFor(modelItem => item.RolNombre)
