--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Usuarios";
 }
 
+
 <div class="container">
     <h1>Usuarios</h1>
 
@@ -61,9 +62,12 @@
                         @Html.DisplayFor(modelItem => item.Email)
                     </td>
                     <td>
-                        @if(item.AvatarUrl != null){
-                        <img width="32" src="@item.AvatarUrl" alt="User Avatar" />
-                        }else{
+                        @if (item.AvatarUrl != null)
+                        {
+                            <img width="32" src="@item.AvatarUrl" alt="User Avatar" />
+                        }
+                        else
+                        {
                             <p>Sin avatar</p>
                         }
                     </td>
@@ -75,16 +79,19 @@
                                 class="fa fa-edit"></span></a>
                         <a asp-action="Detalle" asp-route-IdUsuario="@item.IdUsuario" title="DetalleUsuario"><span
                                 class="fa fa-info"></span></a>
-                        <a asp-action="Eliminar" asp-route-id="@item.IdUsuario" title="Eliminar"
-                            onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
-                                class="fa fa-trash text-danger"></span></a>
+                        @if (User.IsInRole("Administrador")){
+
+                            <a asp-action="Eliminar" asp-route-id="@item.IdUsuario" title="Eliminar"
+                                onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
+                                    class="fa fa-trash text-danger"></span></a>
+                        }
                     </td>
                 </tr>
             }
         </tbody>
     </table>
 </div>
-
+}
 @section Scripts {
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="~/js/search.js"></script>
