--- a/Views/Inquilino/Index.cshtml
+++ b/Views/Inquilino/Index.cshtml
@@ -66,9 +66,12 @@
                             class="fa fa-edit"></span></a>
                     <a asp-action="Detalle" asp-route-IdInquilino="@item.IdInquilino" title="Detalle"><span
                             class="fa fa-info"></span></a>
-                    <a asp-action="Eliminar" asp-route-id="@item.IdInquilino" title="Eliminar"
-                        onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
-                            class="fa fa-trash text-danger"></span></a>
+                    @if (User.IsInRole("Administrador"))
+                    {
+                        <a asp-action="Eliminar" asp-route-id="@item.IdInquilino" title="Eliminar"
+                            onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
+                                class="fa fa-trash text-danger"></span></a>
+                    }
                 </td>
             </tr>
         }
