--- a/Views/Pago/Index.cshtml
+++ b/Views/Pago/Index.cshtml
@@ -71,9 +71,11 @@
                             class="fa fa-edit"></span></a>
                     <a asp-action="Detalle" asp-route-IdPago="@item.IdPago" title="DetallePago"><span
                             class="fa fa-info"></span></a>
-                    <a asp-action="Eliminar" asp-route-id="@item.IdPago" title="Eliminar"
-                        onclick="return confirm('¿Estás seguro de eliminar a IdPago: @item.IdPago / IdContrato: @item.IdContrato?');"><span
-                            class="fa fa-trash text-danger"></span></a>
+                    @if (User.IsInRole("Administrador")){
+                        <a asp-action="Eliminar" asp-route-id="@item.IdPago" title="Eliminar"
+                            onclick="return confirm('¿Estás seguro de eliminar a IdPago: @item.IdPago / IdContrato: @item.IdContrato?');"><span
+                                class="fa fa-trash text-danger"></span></a>
+                    }
                 </td>
             </tr>
         }
