--- a/Views/Propietario/Index.cshtml
+++ b/Views/Propietario/Index.cshtml
@@ -66,9 +66,11 @@
                             class="fa fa-edit"></span></a>
                     <a asp-action="Detalle" asp-route-IdPropietario="@item.IdPropietario" title="DetallePropietario"><span
                             class="fa fa-info"></span></a>
-                    <a asp-action="Eliminar" asp-route-id="@item.IdPropietario" title="Eliminar"
-                        onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
-                            class="fa fa-trash text-danger"></span></a>
+                    @if (User.IsInRole("Administrador")){
+                        <a asp-action="Eliminar" asp-route-id="@item.IdPropietario" title="Eliminar"
+                            onclick="return confirm('¿Estás seguro de eliminar a @item.Nombre @item.Apellido?');"><span
+                                class="fa fa-trash text-danger"></span></a>
+                    }
                 </td>
             </tr>
         }
