--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -53,11 +53,13 @@
                                     <i class="fa fa-folder-open"></i> Contrato
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index">
-                                    <i class="fa fa-users"></i> Usuario
-                                </a>
-                            </li>
+                            @if (User.IsInRole("Administrador")){
+                                <li class="nav-item">
+                                    <a class="nav-link text-light" asp-area="" asp-controller="Usuario" asp-action="Index">
+                                        <i class="fa fa-users"></i> Usuario
+                                    </a>
+                                </li>
+                            }
                             <li class="nav-item">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Pago" asp-action="Index">
                                     <i class="fa fa-money"></i> Pagos
