--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -95,6 +95,16 @@
                 <label asp-for="Apellido" class="control-label"></label>
                 <input asp-for="Apellido" class="form-control" name="Apellido" />
             </div>
+            @if (User.IsInRole("Administrador")){
+           <div class="form-group">
+                <label asp-for="Rol" class="control-label">Rol (Elegir)</label>
+                <select asp-for="Rol" class="form-control" required>
+                    <option value="Administrador">Administrador</option>
+                    <option value="Empleado">Empleado</option>
+                </select>
+                <span asp-validation-for="Rol" class="text-danger"></span>
+            </div>
+            }
             <div class="form-group">
                 <label for="claveActual" class="control-label">Contraseña Actual (Necesaria para realizar cualquier cambio
                     de datos)</label>
